[gd_scene load_steps=4 format=3 uid="uid://col58ifbqrbi7"]

[ext_resource type="Script" path="res://dealer_hand.gd" id="1_8qgv3"]
[ext_resource type="AudioStream" uid="uid://d3oes71l8inh4" path="res://Resources/Audio/fx/poker sfx card put down 0.wav" id="2_ail8o"]
[ext_resource type="AudioStream" uid="uid://m8nlva7xh2pv" path="res://Resources/Audio/fx/poker sfx card pickup 0.wav" id="3_ke67e"]

[node name="DealerHand" type="Node2D"]
script = ExtResource("1_8qgv3")

[node name="DealButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -40.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "Deal"

[node name="ClearButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_top = 8.0
offset_bottom = 39.0
grow_horizontal = 0
disabled = true
text = "Clear"

[node name="Cards" type="Node2D" parent="."]
position = Vector2(64, 0)

[node name="CardValue" type="Label" parent="."]
offset_left = -95.0
offset_top = -16.0
offset_right = -55.0
offset_bottom = 7.0
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DealAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ail8o")
volume_db = -1.0
max_polyphony = 10

[node name="PickupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ke67e")
volume_db = -4.0

[connection signal="pressed" from="DealButton" to="." method="_on_deal_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
